fixed auth form overflow

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -43,6 +43,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 }
 
 .app-body {
